<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">StudieCoach</string>
    <string name="title_home">StudieCoach</string>
    <string name="action_settings">Settings</string>

    <!-- Timer -->
    <string name="button_timer">Timer</string>
    <string name="title_timer">Timer</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="button_start_timer">Start Timer</string>

    <!-- Calendar -->
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_tip_view">TipViewActivity</string>

    <!-- Statistics -->
    <string name="title_activity_statistics">Statistik</string>

    <!-- Course -->
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_course_details">CourseDetails</string>
    <string name="title_activity_course_tasks">CourseTasks</string>
    <string name="title_activity_home">Hem</string>

    <!-- Tip -->
    <string name="tip_button_1">Var skall man studera</string>
    <string name="tip_button_2">Hur skall man ta sig an sina studier</string>
    <string name="tip_button_3">Hur hamnar man i rätt sinnesstämning</string>
    <string name="tip_button_4">Ta med dig allt du behöver, och inte det du inte behöver</string>
    <string name="tip_button_5">Öva själv eller med vänner</string>
    <string name="tip_button_6">Se till att du har ett schema du klarar av</string>
    <string name="tip_button_7">Ta pauser, och belöna dig själv</string>
    <string name="tip_button_8">Lev ett nyttigt och balanserat liv</string>
    <string name="tip_button_9">Reflektera över studierna</string>
    <string name="tip_button_10">Motivation</string>
    <string name="header_tips">Studietips</string>

    <!-- Study techniques-->
    <string name="tip_button_11">Elaborate Interrogation</string>
    <string name="tip_button_12">Self-explanation</string>
    <string name="tip_button_13">Summarization</string>
    <string name="tip_button_14">Imagery</string>
    <string name="tip_button_15">Rereading</string>
    <string name="tip_button_16">Practice testing</string>
    <string name="tip_button_17">Distributed practice</string>
    <string name="tip_button_18">Interleaved practice</string>
    <string name="header_techniques">Studietekniker</string>

    <!-- Tasks -->
    <string name="type_button_text_reading"><u>LÄSANVISNING</u></string>
    <string name="type_button_text_other"><u>RÄKNEUPPGIFT</u></string>

    <string name="type_title">TYP AV UPPGIFT\n\<font size="10">Klicka för att ändra</font></string>

    <string name="save_task"><font size="23">SPARA UPPGIFT</font></string>

    <string name="course_title">KURS</string>
    <string name="type_place_title">Typ och tid för uppgiften</string>
    <string name="chapter_title">KAPITEL</string>
    <string name="week_title">VECKA</string>
    <string name="task_info_title">uppgiftsinformation</string>
    <string name="saved_tasks_other_title">Sparade Räkneuppgifter</string>
    <string name="saved_tasks_read_title">Sparade Läsanvisningar</string>

    <string name="task_title"><font size="15">UPPGIFTSNUMMER </font></string>
    <string name="task_string_hint"><font size="15">ex: 1&#8211;5 eller 1,2,3</font></string>
    <string name="part_title"><font size="15">DELUPPGIFT(ER) </font></string>
    <string name="part_string_hint"><font size="15">ex: abcd</font></string>

    <!-- Colours -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey">#e5e5e5</color>
    <color name="pink">#fcb3c1</color>
    <color name="purple">#5E229B</color>
    <color name="green">#78CF20</color>
    <color name="yellow">#fcefb3</color>

    <color name="complimentaryColor">#d14b02</color>
    <color name="primaryColor">#33b5e5</color>
    <color name="secondaryColor">#B3E5FC</color>
    <color name="primaryDarkColor">#0288D1</color>
    <color name="backgroundColor">#efefef</color>


    <string name="title_activity_study_task">StudyTaskActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_activity_my_profile">activity_my_profile</string>
    <string name="title_activity_techniques">TechniquesActivity</string>
    <string name="title_activity_detailed_info">DetailedInfoActivity</string>
    <string name="title_activity_techs_ntips">TechsNTipsActivity</string>
    <string name="title_activity_timersettings">TimerSettings</string>
    <string name="title_activity_getAssignmetsFromWeb">GetWebAssignmets</string>
    <string name="course_off">Avslutad</string>
    <string name="course_on">Pågående</string>

    <string name="title_activity_repetition">RepetitionActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>