<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.chalmers.datx02_15_36.studeraeffektivt.fragment.TipFrag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Studietekniker"
        android:id="@+id/tip_header"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tip_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/scrollView">

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_11"
                android:id="@+id/button11" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_12"
                android:id="@+id/button12" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_13"
                android:id="@+id/button13" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_14"
                android:id="@+id/button14" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_15"
                android:id="@+id/button15" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_16"
                android:id="@+id/button16" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_17"
                android:id="@+id/button17" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_18"
                android:id="@+id/button18" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
