<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.chalmers.datx02_15_36.studeraeffektivt.fragment.TipFrag">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/scrollView">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_button_1"
                android:id="@+id/button1"
                android:drawableLeft="@drawable/var_skall_man_studera_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_2"
                android:id="@+id/button2"
                android:drawableLeft="@drawable/hur_skall_man_ta_sig_an_sina_studier_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_3"
                android:id="@+id/button3"
                android:drawableLeft="@drawable/hur_hamnar_man_i_r_att_sinnesst_amning_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_4"
                android:id="@+id/button4"
                android:drawableLeft="@drawable/ta_med_dig_allt_du_beho_ver__och_inte_det_du_inte_beho_ver_"
                android:background="?android:attr/selectableItemBackground" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_5"
                android:id="@+id/button5"
                android:drawableLeft="@drawable/o_va_sj_alv_eller_med_v_anner_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_6"
                android:id="@+id/button6"
                android:drawableLeft="@drawable/se_till_att_du_har_ett_schema_du_klarar_av_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_7"
                android:id="@+id/button7"
                android:drawableLeft="@drawable/ta_pauser__och_belo_na_dig_sj_alv_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_8"
                android:id="@+id/button8"
                android:drawableLeft="@drawable/lev_ett_nyttigt_och_balanserat_liv_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_9"
                android:id="@+id/button9"
                android:drawableLeft="@drawable/reflektera_o_ver_studierna_"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tip_button_10"
                android:id="@+id/button10"
                android:drawableLeft="@drawable/motivation_"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
