<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.chalmers.datx02_15_36.studeraeffektivt.fragment.StudyTaskFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:id="@+id/courseLayout"
        android:orientation="vertical"
        android:weightSum="1.0"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courselabel"
            android:text="@string/course_title"

            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseSpinner"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/typeLayout"
        android:layout_below="@+id/courseLayout"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_title"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#03A9F4"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLayout"
        android:layout_below="@+id/typeLayout"
        android:baselineAligned="false"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="0.5"
            android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chapterLabel"
                android:text="@string/chapter_title"
                android:textSize="17sp"
                android:layout_weight="0.35"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chapterSpinner"
                android:layout_weight="0.65"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weekLabel"
            android:text="@string/week_title"
            android:textSize="17sp"
            android:layout_weight="0.35"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weekSpinner"
            android:layout_weight="0.65"/>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">
        <ToggleButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/readOrTaskAssignment"
            android:textOff="@string/task_reading_above"
            android:textOn="@string/task_other_above"
            android:background="@null"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/infoLyout"
        android:layout_below="@+id/firstLayout"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_info_title"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#03A9F4"
            style="?android:attr/listSeparatorTextViewStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:id="@+id/secondLayout"
        android:layout_below="@+id/infoLyout"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.35">

            <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="number"
            android:hint="@string/task_string_hint"
            android:digits="0123456789,-."
            android:id="@+id/taskInput"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/part_string_hint"
            android:digits="abcdefghijklmnopqrstuvwxy"
            android:id="@+id/taskParts"
            android:layout_gravity="left|bottom"
            />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/thirdLayout"
        android:weightSum="1.0"
        android:layout_weight="0.65">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/save_task"
            android:textColor="#03A9F4"
            android:id="@+id/addButton"
            android:background="@null"
            />

    </LinearLayout>
</LinearLayout>

    <TextView
        android:id="@+id/savedTaskTitle"
        android:layout_below="@+id/secondLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_tasks_title"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="#03A9F4"
        style="?android:attr/listSeparatorTextViewStyle"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:id="@+id/fourthLayout"
        android:layout_below="@+id/savedTaskTitle"
        android:layout_centerHorizontal="true"
        android:weightSum="1">



    <ScrollView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewOfTasks"
        android:layout_weight="0.5"
         >

        <se.chalmers.datx02_15_36.studeraeffektivt.view.FlowLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layoutWithinScrollViewOfTasks">
            </se.chalmers.datx02_15_36.studeraeffektivt.view.FlowLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewOfReadingAssigmnents"
        android:layout_weight="0.5"
        >

           <se.chalmers.datx02_15_36.studeraeffektivt.view.FlowLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutWithinScrollViewOfReadingAssignments">
                </se.chalmers.datx02_15_36.studeraeffektivt.view.FlowLayout>

    </ScrollView>

    </LinearLayout>

</RelativeLayout>
